<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_friend_msg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/normalgray"
    android:orientation="vertical"
    tools:context="com.yujie.letwechat.ui.activity.FriendMsgActivity">

    <com.yujie.letwechat.widget.CustomTitleBar
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_heightPercent="6%"
        app:title_text_color="@color/white"
        app:title_text="@string/app_name"
        app:show_left_btn="true"
        app:title_text_size="10dp"
        android:id="@+id/titlebar"
        >
    </com.yujie.letwechat.widget.CustomTitleBar>

    <RelativeLayout
        android:layout_below="@id/titlebar"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="0dp"
        app:layout_heightPercent="9%"
        android:background="@color/white"
        android:id="@+id/search_layout_root"
        >

        <EditText
            android:id="@+id/et_usertel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/edittext_login"
            android:hint="@string/addcontact_title"
            android:inputType="text"
            android:paddingLeft="15dp"
            android:singleLine="true"
            android:maxLength="11"
            android:drawableLeft="@drawable/search_icon"
            android:textColorHint="#DDDDDD"
            android:textSize="16sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_enable_green"
            android:textColor="@color/white"
            android:text="@string/search"
            android:textSize="18dp"
            android:layout_margin="10dp"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/txt_nomsg"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:textSize="16sp"
        android:visibility="gone"
        android:textColor="@color/black1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/no_chat"
        android:text="@string/no_msg" />

    <android.support.v7.widget.RecyclerView
        android:layout_below="@id/search_layout_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:id="@+id/msg_rec"
        >

    </android.support.v7.widget.RecyclerView>
</android.support.percent.PercentRelativeLayout>
