<?xml version="1.0" encoding="utf-8"?>
<com.yujie.letwechat.widget.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context="com.yujie.letwechat.view.activity.RegisterActivity">

    <include layout="@layout/layout_title"/>

    <com.yujie.letwechat.widget.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="12dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_heightPercent="9%"
            android:background="@drawable/abs__spinner_ab_default_holo_light">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/countries_and_areas"
                android:textColor="#353535"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:text="中国"
                android:textColor="#45c01a"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_alignParentBottom="true"
                android:background="#dbdbdb" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="0dp"
            app:layout_heightPercent="9%"
            >

            <EditText
                android:id="@+id/et_realname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/edittext_login"
                android:hint="@string/user_name_hint"
                android:inputType="text"
                android:paddingLeft="90dp"
                android:singleLine="true"
                android:maxLength="11"
                android:textColorHint="#DDDDDD"
                android:textSize="16sp" />

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/et_usertel"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/real_name"
                android:textColor="#353535"
                android:textSize="16sp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="0dp"
            app:layout_heightPercent="9%"
            >

            <EditText
                android:id="@+id/et_useruid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/edittext_login"
                android:hint="@string/user_uid_hint"
                android:inputType="number"
                android:paddingLeft="90dp"
                android:singleLine="true"
                android:maxLength="11"
                android:textColorHint="#DDDDDD"
                android:textSize="16sp" />

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/et_useruid"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="学号"
                android:textColor="#353535"
                android:textSize="16sp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="0dp"
            app:layout_heightPercent="9%" >

            <EditText
                android:id="@+id/et_nick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/edittext_login"
                android:hint="@string/user_nick_hint"
                android:inputType="text"
                android:paddingLeft="90dp"
                android:singleLine="true"
                android:textColorHint="#DDDDDD"
                android:textSize="16sp" />

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/et_nick"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/login_nick"
                android:textColor="#353535"
                android:textSize="16sp" />
            <Button
                android:id="@+id/btn_send"
                style="@style/txt_titleStyle1"
                android:layout_width="80dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:enabled="false"
                android:visibility="gone"
                android:text="发送验证码"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:textColor="@color/white"
                android:background="@drawable/btn_enable_green"
                android:textSize="12sp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="0dp"
            app:layout_heightPercent="9%" >

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/edittext_login"
                android:hint="@string/password_hint"
                android:paddingLeft="90dp"
                android:password="true"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColorHint="#DDDDDD"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/et_password"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/password"
                android:textColor="#353535"
                android:textSize="16sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_heightPercent="7%"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_enable_green"
            android:paddingBottom="7dp"
            android:paddingTop="7dp"
            android:text="注册"
            android:textColor="@android:color/white"
            android:textSize="18sp" />


    </com.yujie.letwechat.widget.PercentLinearLayout>
</com.yujie.letwechat.widget.PercentLinearLayout>
