<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yujie.letwechat.ui.activity.SettingActivity">

    <com.yujie.letwechat.widget.CustomTitleBar
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_heightPercent="6%"
        app:title_text_color="@color/white"
        app:title_text="@string/app_name"
        app:show_left_btn="false"
        app:title_text_size="10dp"
        android:id="@+id/titlebar"
        >
    </com.yujie.letwechat.widget.CustomTitleBar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="0dp"
        android:id="@+id/oldpwdroot"
        android:layout_below="@id/titlebar"
        app:layout_heightPercent="9%" >

        <EditText
            android:id="@+id/et_oldpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/edittext_login"
            android:hint="@string/password_hint"
            android:paddingLeft="90dp"
            android:password="true"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColorHint="#DDDDDD"
            android:textSize="16sp" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/et_oldpassword"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/oldpwd"
            android:textColor="#353535"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/newpwdroot"
        android:layout_below="@id/oldpwdroot"
        app:layout_heightPercent="9%" >

        <EditText
            android:id="@+id/et_newpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/edittext_login"
            android:hint="@string/password_hint"
            android:paddingLeft="90dp"
            android:password="true"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColorHint="#DDDDDD"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/et_newpassword"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/newpwd"
            android:textColor="#353535"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/repeatpwdroot"
        android:layout_below="@id/newpwdroot"
        app:layout_heightPercent="9%" >

        <EditText
            android:id="@+id/et_repeatpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/edittext_login"
            android:hint="@string/password_hint"
            android:paddingLeft="90dp"
            android:password="true"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColorHint="#DDDDDD"
            android:textSize="16sp" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/et_repeatpassword"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/onemore"
            android:textColor="#353535"
            android:textSize="16sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_modPwd"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_heightPercent="7%"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_enable_green"
        android:paddingBottom="7dp"
        android:paddingTop="7dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/repeatpwdroot"
        android:text="修改密码"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_heightPercent="7%"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_bg_orange"
        android:paddingBottom="7dp"
        android:paddingTop="7dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/btn_modPwd"
        android:text="退出登录"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</android.support.percent.PercentRelativeLayout>
